--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     />
   </head>
   <body>
+    <form class="search">
+      <input
+        type="text"
+        class="search__field"
+        placeholder="Introduza um nome..."
+      />
+    </form>
+    <div class="image"></div>
+    <div class="grid-container"></div>
     <script src="./script.js"></script>
   </body>
 </html>
